# rust_playground

./: .gitignore  LEARNING_RUST.md  LICENSE  README.md
ACTIX/: README.md
BASICS/r01_project_structure/: Cargo.toml  README.md
BASICS/r01_project_structure/src/: A_mod.rs  lib.rs
BASICS/r01_project_structure/src/B_mod/: b_one.rs  b_two.rs  mod.rs
BASICS/r01_project_structure/src/B_mod/inner/: mod.rs  sm1.rs
BASICS/r01_project_structure/tests/: test_mylib.rs
BASICS/r02_project_workspaces/: Cargo.toml  README.md
BASICS/r02_project_workspaces/my_exe/: Cargo.toml
BASICS/r02_project_workspaces/mylib/: Cargo.toml
BASICS/r03_ofbook/: Cargo.toml  hello.txt
BASICS/r03_ofbook/src/: concurrency.rs  custom_error_type.rs  enums.rs  error_handling.rs  flow_control.rs  function_pointers.rs  functions.rs  generics.rs  hash_map.rs  iterators.rs  lifetime_spec.rs  macros.rs  main.rs  option_enum.rs  ownership.rs  polymorphism.rs  result_type.rs  slice.rs  smart_pointers.rs  string.rs  structs.rs  template.rs  testing.rs  traits.rs  types.rs  unsafe_rust_intro.rs  vector.rs  (+1 more)
BASICS/r04_tcp/: Cargo.toml
BASICS/r05_async/: Cargo.toml  README.md
CROSS_COMPILE/: README.md
CROSS_COMPILE/myrustlib/: Cargo.toml
LOCALIZATION/p1_fluent_templates/: Cargo.toml  README.md
QVTOKENS/POC/poc1_tokio_playground/: Cargo.toml  README.md
QVTOKENS/POC/poc1_tokio_playground/src/: main.rs  pyclient.py  single_thread_http_srv_demo.rs  single_thread_token_checker.rs  token_checker_srv_for_bench.rs  token_checker_srv_for_bench_SPSC_channel_shutdown.rs
QVTOKENS/POC/tcp_client_bm/: Cargo.toml  README.md
QVTOKENS/POC/tcp_client_bm/src/: cli_options.rs  main.rs  multi_threaded_multi_client.rs  single_threaded_multi_client.rs
apptools/: Cargo.toml
apptools/src/: lib.rs
apptools/src/err/: mod.rs  mod_before_renaming_to_AppErrPrototype.rs
(+20 files in other folders)
