[package]
name = "apptools"
version = "0.1.0"
authors = ["iotanbo <yurizappo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2"

# https://github.com/dtolnay/paste
paste = "1.0"


[[bin]]
name = "err_poc"
path = "bin/err_poc/main.rs"
